fixing horizontal scroll bar

--- a/_sass/_wax.scss
+++ b/_sass/_wax.scss
@@ -198,7 +198,7 @@ content section
 }
 
 #wax-footer {
-  width: 100vw;
+  width: 100%;
   padding-bottom: 5rem;
   padding-top: 3rem;
   background-color: $neutral;
@@ -500,7 +500,7 @@ search box
           display: table-cell;
           padding: .4rem;
           vertical-align: center;
-        }        
+        }
 
         // .info {
         //   text-decoration: none;
